NetBSD Problem Report #49372

From www@NetBSD.org  Fri Nov  7 05:34:44 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 82428A667B
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  7 Nov 2014 05:34:44 +0000 (UTC)
Message-Id: <20141107053440.EA16EA665F@mollari.NetBSD.org>
Date: Fri,  7 Nov 2014 05:34:40 +0000 (UTC)
From: davshao@gmail.com
Reply-To: davshao@gmail.com
To: gnats-bugs@NetBSD.org
Subject: amd64 panic: pci_make_tag: bad request on Intel Q9400, G45 Eaglelake
X-Send-Pr-Version: www-1.0

>Number:         49372
>Category:       kern
>Synopsis:       amd64 panic: pci_make_tag: bad request on Intel Q9400, G45 Eaglelake
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Nov 07 05:35:00 +0000 2014
>Closed-Date:    Fri Nov 07 17:27:33 +0000 2014
>Last-Modified:  Tue Nov 11 09:10:01 +0000 2014
>Originator:     David Shao
>Release:        NetBSD 7.99.1 GENERIC amd64
>Organization:
>Environment:
NetBSD  7.99.1 NetBSD 7.99.1 (GENERIC) #9: Tue Nov  4 21:16:35 PST 2014  xxxxxx@:/usr/obj/sys/arch/amd64/compile/GENERIC
>Description:
Kernel panics on boot on a Shuttle SG45H7 small form factor machine, Intel Core 2 quad Q9400 CPU, G45 Eaglelake integrated graphics.

i915drmkms0 at pci0 dev 2 function 0: vendor 8086 product 2e22 (rev. 0x03)
drm: Memory usable by graphics device = 512M
drm: Supports vblank timestamp caching Rev 2 (21.10.2013)
drm: Driver supports precise vblank timestamp query
panic: pci_make_tag: bad request
fatal breakpoint trap in supervisor mode
trap type 1 code 0 rip ffffffff8028a38d cs 8 rflags 26 cr2 0 ilevel 8 rsp ffffffff813785b0
curlwp 0xffffffff810cadc0 pid 0.1 lowest kstack 0xffffffff813752c0
Stopped in pid 0.1 (system) at netbsd:breakpoint+0x5:   leave

db{0}> trace
breakpoint() at netbsd:breakpoint+0x5
vpanic() at netbsd:vpanic+0x13c
snprintf() at netbsd:nsprintf
pci_decompose_tag() at netbsd:pci_decompose_tag
pci_enumerate_bus() at netbsd:pci_enumerate_bus+0x156
pci_find_device() at netbsd_pci_find_device+0x4b
intel_dsm_detect() at netbsd:intel_dsm_detect+0x102
i915_driver_load() at netbsd:i915_driver_load+0xbbd
drm_dev_register() at netbsd:drm_dev_register+0x87
drm_pci_attach() at netbsd_drm_pci_attach+0x2b7
i915drmkms_attach() at netbsd:i915drmkms_attach+0x9b
config_attach_loc() at netbsd:config_attach_loc+0x17a
pci_probe_device() at netbsd:pci_probe_device+0x4ac
pci_enumerate_bus() at netbsd_pci_enumerate_bus+0x168
pcirescan() at netbsd:pcirescan+0x43
pciattach() at netbsd:pciatach+0x193
config_attach_loc() at netbsd:config_atach_loc+0x17a
mp_pci_scan() at netbsd:mp_pci_scan+0xa4
mainbus_attach() at netbsd:mainbus_attach+0x2f5
config_attach_loc() at netbsd:config_attach_loc+0x17a
cpu_configure() at netbsd:cpu_configure+0x26
main() at netbsd:main+0x2ae

Current cvs source through:

Module Name:    src
Date:           Fri Nov  7 02:57:19 UTC 2014

Modified Files:
        src/distrib/utils/x_route: Makefile

Log Message:
Fix build of crunched "route".

rebuilt with
./build.sh -O ../obj -T ../tools -X ../xsrc -x -U -u release
./build.sh -O ../obj -T ../tools -X ../xsrc -x -U kernel=GENERIC

dmesg:

i915drm0 at vga0: Intel G45/G43
i915drm0: AGP at 0xd0000000 256MB
i915drm0: 
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 7.99.1 (GENERIC) #9: Tue Nov  4 21:16:35 PST 2014
	xxxxxx@:/usr/obj/sys/arch/amd64/compile/GENERIC
total memory = 8124 MB
avail memory = 7869 MB
kern.module.path=/stand/amd64/7.99.1/modules
timecounter: Timecounters tick every 10.000 msec
timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
Shuttle Inc SG45 (V10)
mainbus0 (root)
ACPI: RSDP 0x00000000000F7EE0 000014 (v00 Shuttl)
ACPI: RSDT 0x00000000BBCE3000 00003C (v01 Shuttl Shuttle  42302E31 AWRD 00000000)
ACPI: FACP 0x00000000BBCE3080 000084 (v02 Shuttl Shuttle  42302E31 AWRD 00000000)
ACPI BIOS Warning (bug): Optional FADT field Pm2ControlBlock has zero address or length: 0x0000000000000450/0x0 (20140926/tbfadt-678)
ACPI BIOS Warning (bug): Invalid length for FADT/Pm2ControlBlock: 0, using default 8 (20140926/tbfadt-730)
ACPI: DSDT 0x00000000BBCE3140 004E30 (v01 SHUTTL SG45V10  00001000 MSFT 03000000)
ACPI: FACS 0x00000000BBC90000 000040
ACPI: HPET 0x00000000BBCE8040 000038 (v01 Shuttl Shuttle  42302E31 AWRD 00000098)
ACPI: MCFG 0x00000000BBCE8080 00003C (v01 Shuttl Shuttle  42302E31 AWRD 00000000)
ACPI: SLIC 0x00000000BBCE80C0 000176 (v01 Shuttl Shuttle  42302E31 AWRD 00000000)
ACPI: APIC 0x00000000BBCE7F80 000084 (v01 Shuttl Shuttle  42302E31 AWRD 00000000)
ACPI: SSDT 0x00000000BBCE8B60 000590 (v01 PmRef  CpuPm    00003000 INTL 20041203)
ACPI: All ACPI Tables successfully acquired
cpu0 at mainbus0 apid 0: Intel(R) Core(TM)2 Quad CPU    Q9400  @ 2.66GHz, id 0x1067a
cpu1 at mainbus0 apid 3: Intel(R) Core(TM)2 Quad CPU    Q9400  @ 2.66GHz, id 0x1067a
cpu2 at mainbus0 apid 1: Intel(R) Core(TM)2 Quad CPU    Q9400  @ 2.66GHz, id 0x1067a
cpu3 at mainbus0 apid 2: Intel(R) Core(TM)2 Quad CPU    Q9400  @ 2.66GHz, id 0x1067a
ioapic0 at mainbus0 apid 4: pa 0xfec00000, version 0x20, 24 pins
acpi0 at mainbus0: Intel ACPICA 20140926
acpi0: X/RSDT: OemId <Shuttl,Shuttle ,42302e31>, AslId <AWRD,00000000>
acpi0: SCI interrupting at int 9
timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
hpet0 at acpi0: high precision event timer (mem 0xfed00000-0xfed00400)
timecounter: Timecounter "hpet0" frequency 14318180 Hz quality 2000
acpibut0 at acpi0 (PWRB, PNP0C0C): ACPI Power Button
SYSR (PNP0C02) at acpi0 not configured
attimer1 at acpi0 (TMR, PNP0100): io 0x40-0x43
pcppi1 at acpi0 (SPKR, PNP0800): io 0x61
midi0 at pcppi1: PC speaker
sysbeep0 at pcppi1
FDC0 (PNP0700) at acpi0 not configured
UAR1 (PNP0501) at acpi0 not configured
ECP1 (PNP0401) at acpi0 not configured
PMIO (PNP0C02) at acpi0 not configured
FWH (INT0800) at acpi0 not configured
EXPL (PNP0C02) at acpi0 not configured
MEM (PNP0C01) at acpi0 not configured
acpifan0 at acpi0 (FAN, PNP0C0B): ACPI Fan
acpitz0 at acpi0 (THRM): cpu0
acpitz0: active cooling level 0: 50.0C
acpitz0: levels: critical 60.0 C, passive 50.0 C
ACPI: Enabled 1 GPEs in block 00 to 3F
ACPI Exception: AE_NOT_FOUND, While evaluating Sleep State [\_S1_] (20140926/hwxface-646)
ACPI Exception: AE_NOT_FOUND, While evaluating Sleep State [\_S2_] (20140926/hwxface-646)
attimer1: attached to pcppi1
pci0 at mainbus0 bus 0: configuration mode 1
pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
pchb0 at pci0 dev 0 function 0: vendor 8086 product 2e20 (rev. 0x03)
agp0 at pchb0: G4X-family chipset
agp0: detected 65020k stolen memory
agp0: aperture at 0xd0000000, size 0x10000000
i915drmkms0 at pci0 dev 2 function 0: vendor 8086 product 2e22 (rev. 0x03)
drm: Memory usable by graphics device = 512M
drm: Supports vblank timestamp caching Rev 2 (21.10.2013).
drm: Driver supports precise vblank timestamp query.
i915drmkms0: interrupting at ioapic0 pin 16 (i915)
intelfb0 at i915drmkms0
i915drmkms0: info: registered panic notifier
intelfb0: framebuffer at 0xffff80008ed3d000, size 1920x1080, depth 32, stride 7680
wsdisplay0 at intelfb0 kbdmux 1: console (default, vt100 emulation)
wsmux1: connecting to wsdisplay0
vendor 8086 product 2e23 (miscellaneous display, revision 0x03) at pci0 dev 2 function 1 not configured
uhci0 at pci0 dev 26 function 0: vendor 8086 product 3a37 (rev. 0x00)
uhci0: interrupting at ioapic0 pin 16
usb0 at uhci0: USB revision 1.0
uhci1 at pci0 dev 26 function 1: vendor 8086 product 3a38 (rev. 0x00)
uhci1: interrupting at ioapic0 pin 21
usb1 at uhci1: USB revision 1.0
uhci2 at pci0 dev 26 function 2: vendor 8086 product 3a39 (rev. 0x00)
uhci2: interrupting at ioapic0 pin 19
usb2 at uhci2: USB revision 1.0
ehci0 at pci0 dev 26 function 7: vendor 8086 product 3a3c (rev. 0x00)
ehci0: interrupting at ioapic0 pin 18
ehci0: EHCI version 1.0
ehci0: companion controllers, 2 ports each: uhci0 uhci1 uhci2
usb3 at ehci0: USB revision 2.0
hdaudio0 at pci0 dev 27 function 0: HD Audio Controller
hdaudio0: interrupting at ioapic0 pin 22
hdafg0 at hdaudio0: vendor 10ec product 0888
hdafg0: DAC00 8ch: Speaker [Jack]
hdafg0: DAC01 2ch: HP Out [Jack]
hdafg0: DIG02 2ch: SPDIF Out [Jack]
hdafg0: ADC03 2ch: Line In [Jack], AUX [Built-In], Mic In [Jack]
hdafg0: DIG-In04 2ch: SPDIF In [Jack]
hdafg0: 8ch/2ch 44100Hz 48000Hz 96000Hz 192000Hz PCM16 PCM20 PCM24 AC3
audio0 at hdafg0: full duplex, playback, capture, mmap, independent
hdafg1 at hdaudio0: vendor 8086 product 2803
hdafg1: HDMI00 8ch: Digital Out [Jack]
hdafg1: 8ch/0ch 48000Hz PCM16*
ppb0 at pci0 dev 28 function 0: vendor 8086 product 3a40 (rev. 0x00)
ppb0: PCI Express capability version 1 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci1 at ppb0 bus 1
pci1: i/o space, memory space enabled, rd/line, wr/inv ok
jmide0 at pci1 dev 0 function 0: vendor 197b product 2368 (rev. 0x00)
jmide0: 1 PATA port
jmide0: interrupting at ioapic0 pin 16
jmide0: PCI IDE interface used
jmide0: bus-master DMA support present
jmide0: primary channel wired to native-PCI mode
jmide0: primary channel is PATA
atabus0 at jmide0 channel 0
jmide0: secondary channel wired to native-PCI mode
jmide0: secondary channel is unused
ppb1 at pci0 dev 28 function 2: vendor 8086 product 3a44 (rev. 0x00)
ppb1: PCI Express capability version 1 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci2 at ppb1 bus 2
pci2: i/o space, memory space enabled, rd/line, wr/inv ok
mskc0 at pci2 dev 0 function 0, Yukon-2 EC Ultra (0x5): ioapic0 pin 18
msk0 at mskc0 port A: Ethernet address 00:30:1b:bd:74:7c
makphy0 at msk0 phy 0: Marvell 88E1149 Gigabit PHY, rev. 1
makphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
uhci3 at pci0 dev 29 function 0: vendor 8086 product 3a34 (rev. 0x00)
uhci3: interrupting at ioapic0 pin 23
usb4 at uhci3: USB revision 1.0
uhci4 at pci0 dev 29 function 1: vendor 8086 product 3a35 (rev. 0x00)
uhci4: interrupting at ioapic0 pin 19
usb5 at uhci4: USB revision 1.0
uhci5 at pci0 dev 29 function 2: vendor 8086 product 3a36 (rev. 0x00)
uhci5: interrupting at ioapic0 pin 18
usb6 at uhci5: USB revision 1.0
ehci1 at pci0 dev 29 function 7: vendor 8086 product 3a3a (rev. 0x00)
ehci1: interrupting at ioapic0 pin 23
ehci1: EHCI version 1.0
ehci1: companion controllers, 2 ports each: uhci3 uhci4 uhci5
usb7 at ehci1: USB revision 2.0
ppb2 at pci0 dev 30 function 0: vendor 8086 product 244e (rev. 0x90)
pci3 at ppb2 bus 3
pci3: i/o space, memory space enabled
ichlpcib0 at pci0 dev 31 function 0: vendor 8086 product 3a18 (rev. 0x00)
timecounter: Timecounter "ichlpcib0" frequency 3579545 Hz quality 1000
ichlpcib0: 24-bit timer
ichlpcib0: TCO (watchdog) timer configured.
ahcisata0 at pci0 dev 31 function 2: vendor 8086 product 3a22 (rev. 0x00)
ahcisata0: interrupting at ioapic0 pin 19
ahcisata0: 64-bit DMA
ahcisata0: AHCI revision 1.20, 6 ports, 32 slots, CAP 0xef22ffc5<EMS,CCCS,PSC,SSC,PMD,SPM,ISS=0x2=Gen2,SCLO,SAL,SALP,SSS,SSNTF,SNCQ,S64A>
atabus1 at ahcisata0 channel 0
atabus2 at ahcisata0 channel 1
atabus3 at ahcisata0 channel 2
atabus4 at ahcisata0 channel 3
atabus5 at ahcisata0 channel 4
atabus6 at ahcisata0 channel 5
ichsmb0 at pci0 dev 31 function 3: vendor 8086 product 3a30 (rev. 0x00)
ichsmb0: interrupting at ioapic0 pin 18
iic0 at ichsmb0: I2C bus
isa0 at ichlpcib0
lpt1 at isa0 port 0x278-0x27b irq : polled
com0 at isa0 port 0x3f8-0x3ff irq 4: ns16550a, working fifo
pckbc0 at isa0 port 0x60-0x64
pckbd0 at pckbc0 (kbd slot)
pckbc0: using irq 1 for kbd slot
wskbd0 at pckbd0: console keyboard, using wsdisplay0
fdc0 at isa0 port 0x3f0-0x3f7 irq 6 drq 2
acpicpu0 at cpu0: ACPI CPU
acpicpu0: C1: HLT, lat   0 us, pow     0 mW
coretemp0 at cpu0: thermal sensor, 1 C resolution
acpicpu1 at cpu1: ACPI CPU
coretemp1 at cpu1: thermal sensor, 1 C resolution
acpicpu2 at cpu2: ACPI CPU
coretemp2 at cpu2: thermal sensor, 1 C resolution
acpicpu3 at cpu3: ACPI CPU
coretemp3 at cpu3: thermal sensor, 1 C resolution
timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
IPsec: Initialized Security Association Processing.
uhub0 at usb0: vendor 8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub0: 2 ports with 2 removable, self powered
uhub1 at usb1: vendor 8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub1: 2 ports with 2 removable, self powered
uhub2 at usb2: vendor 8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub2: 2 ports with 2 removable, self powered
uhub3 at usb3: vendor 8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub3: 6 ports with 6 removable, self powered
uhub4 at usb4: vendor 8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub4: 2 ports with 2 removable, self powered
uhub5 at usb5: vendor 8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub5: 2 ports with 2 removable, self powered
uhub6 at usb6: vendor 8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub6: 2 ports with 2 removable, self powered
uhub7 at usb7: vendor 8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub7: 6 ports with 6 removable, self powered
ahcisata0 port 1: device present, speed: 3.0Gb/s
ahcisata0 port 2: device present, speed: 3.0Gb/s
wd0 at atabus2 drive 0
wd0: <WDC WD1002FBYS-02A6B0>
wd0: drive supports 16-sector PIO transfers, LBA48 addressing
wd0: 931 GB, 1938021 cyl, 16 head, 63 sec, 512 bytes/sect x 1953525168 sectors
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd0(ahcisata0:1:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133) (using DMA)
wd1 at atabus3 drive 0
wd1: <WDC WD1002FBYS-02A6B0>
wd1: drive supports 16-sector PIO transfers, LBA48 addressing
wd1: 931 GB, 1938021 cyl, 16 head, 63 sec, 512 bytes/sect x 1953525168 sectors
wd1: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd1(ahcisata0:2:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133) (using DMA)
uhub8 at uhub7 port 4: vendor 1a40 USB 2.0 Hub [MTT], class 9/0, rev 2.00/1.00, addr 2
uhub8: multiple transaction translators
uhub8: 7 ports with 7 removable, self powered
uhub9 at uhub8 port 3: Apple, Inc. Keyboard Hub, class 9/0, rev 2.00/96.15, addr 3
uhub9: single transaction translator
uhub9: 3 ports with 2 removable, bus powered
uhidev0 at uhub9 port 2 configuration 1 interface 0
uhidev0: Apple, Inc Apple Keyboard, rev 2.00/0.71, addr 4, iclass 3/1
ukbd0 at uhidev0: 8 modifier keys, 5 key codes, apple fn key
wskbd1 at ukbd0 mux 1
wskbd1: connecting to wsdisplay0
uhidev1 at uhub9 port 2 configuration 1 interface 1
uhidev1: Apple, Inc Apple Keyboard, rev 2.00/0.71, addr 4, iclass 3/0
uhid0 at uhidev1: input=1, output=0, feature=0
uhidev2 at uhub8 port 4 configuration 1 interface 0
uhidev2: Logitech USB Optical Mouse, rev 2.00/34.01, addr 5, iclass 3/1
ums0 at uhidev2: 8 buttons, W and Z dirs
wsmouse0 at ums0 mux 0
Kernelized RAIDframe activated
pad0: outputs: 44100Hz, 16-bit, stereo
audio1 at pad0: half duplex, playback, capture
boot device: wd1
root on wd1a dumps on wd1b
root file system type: ffs
drm: GMBUS [i915 gmbus vga] timed out, falling back to bit banging on pin 2
drm: GMBUS [i915 gmbus dpb] timed out, falling back to bit banging on pin 5
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "NONAKA Kimihiro" <nonaka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49372 CVS commit: src/sys/external/bsd/drm2/dist/drm/i915
Date: Fri, 7 Nov 2014 12:33:57 +0000

 Module Name:	src
 Committed By:	nonaka
 Date:		Fri Nov  7 12:33:57 UTC 2014

 Modified Files:
 	src/sys/external/bsd/drm2/dist/drm/i915: intel_acpi.c

 Log Message:
 pci_attach_args of pci_find_device and match function is not the same thing.
 fix PR/49372.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/sys/external/bsd/drm2/dist/drm/i915/intel_acpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org, 
	gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: 
Subject: Re: kern/49372: amd64 panic: pci_make_tag: bad request on Intel Q9400, G45 Eaglelake
Date: Fri, 7 Nov 2014 07:49:05 -0500

 On Nov 7,  5:35am, davshao@gmail.com (davshao@gmail.com) wrote:
 -- Subject: kern/49372: amd64 panic: pci_make_tag: bad request on Intel Q9400

 I added printing of the bad values. Can you cvs update, run it again and
 show us the message?

 Thanks,

 christos

From: David Shao <davshao@gmail.com>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/49372: amd64 panic: pci_make_tag: bad request on Intel
 Q9400, G45 Eaglelake
Date: Fri, 7 Nov 2014 08:59:45 -0800

 NetBSD 7.99.1 GENERIC amd64 now boots and runs on the Shuttle SG45H7
 machine with Intel Q9400 CPU and G45 Eaglelake graphics, at least in
 the sense of successfully booting to console and being able to run
 commands, as of current source through

 Module Name:    src
 Date:           Fri Nov  7 12:57:42 UTC 2014

 Modified Files:
         src/sys/net: if.c

 Log Message:
 PR/49373: Ryota Ozaki: Running if_clone_create and if_clone_destroy in
 parallel causes panic
 XXX: Pullup 7.

 This PR may therefore be successfully closed.  Thanks for the immediate fix.

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Fri, 07 Nov 2014 12:27:33 -0500
State-Changed-Why:
submitter verified it has been fixed


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49372 CVS commit: [netbsd-7] src/sys/external/bsd/drm2
Date: Tue, 11 Nov 2014 09:06:32 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Nov 11 09:06:32 UTC 2014

 Modified Files:
 	src/sys/external/bsd/drm2/dist/drm/i915 [netbsd-7]: i915_dma.c
 	    i915_drv.h intel_acpi.c intel_opregion.c
 	src/sys/external/bsd/drm2/i915drm [netbsd-7]: files.i915drmkms
 	src/sys/external/bsd/drm2/include/linux [netbsd-7]: acpi.h pci.h

 Log Message:
 Pull up following revision(s) (requested by nonaka in ticket #197):
 	sys/external/bsd/drm2/dist/drm/i915/i915_drv.h: revision 1.10
 	sys/external/bsd/drm2/include/linux/pci.h: revision 1.10
 	sys/external/bsd/drm2/dist/drm/i915/intel_acpi.c: revision 1.3
 	sys/external/bsd/drm2/dist/drm/i915/intel_acpi.c: revision 1.4
 	sys/external/bsd/drm2/dist/drm/i915/intel_acpi.c: revision 1.5
 	sys/external/bsd/drm2/dist/drm/i915/intel_opregion.c: revision 1.6
 	sys/external/bsd/drm2/dist/drm/i915/intel_opregion.c: revision 1.7
 	sys/external/bsd/drm2/include/linux/acpi.h: revision 1.3
 	sys/external/bsd/drm2/dist/drm/i915/i915_dma.c: revision 1.12
 	sys/external/bsd/drm2/i915drm/files.i915drmkms: revision 1.8
 i915drmkms(4): Enable CONFIG_ACPI if NACPICA > 0.
 Now brightness can be adjusted via hotkey on Mouse Computer LB-J300X
 (Clevo W330SU2).
 Fix compilation (debug)
 pci_attach_args of pci_find_device and match function is not the same thing.
 fix PR/49372.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10.2.1 -r1.10.2.2 \
     src/sys/external/bsd/drm2/dist/drm/i915/i915_dma.c
 cvs rdiff -u -r1.7.2.2 -r1.7.2.3 \
     src/sys/external/bsd/drm2/dist/drm/i915/i915_drv.h
 cvs rdiff -u -r1.2 -r1.2.4.1 \
     src/sys/external/bsd/drm2/dist/drm/i915/intel_acpi.c
 cvs rdiff -u -r1.5 -r1.5.2.1 \
     src/sys/external/bsd/drm2/dist/drm/i915/intel_opregion.c
 cvs rdiff -u -r1.5.2.1 -r1.5.2.2 \
     src/sys/external/bsd/drm2/i915drm/files.i915drmkms
 cvs rdiff -u -r1.2 -r1.2.8.1 src/sys/external/bsd/drm2/include/linux/acpi.h
 cvs rdiff -u -r1.7.2.2 -r1.7.2.3 \
     src/sys/external/bsd/drm2/include/linux/pci.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.