pci_attach_args of pci_find_device and match function is not the same thing. fix PR/49372.